--- a/package.json
+++ b/package.json
@@ -2,7 +2,18 @@
 	"name": "edgeros",
 	"displayName": "EdgerOS VSCode Extension",
 	"description": "EdgerOS development extension for VSCode",
-	"version": "0.2.8",
+	"version": "0.2.7",
+	"scripts": {
+		"pack": "vsce package",
+		"publish": "vsce publish",
+		"vscode:prepublish": "npm run compile",
+		"compile": "tsc -p ./",
+		"watch": "tsc -watch -p ./",
+		"pretest": "npm run compile && npm run lint",
+		"lint": "eslint src --ext ts",
+		"test": "node ./out/test/runTest.js",
+		"sync:tpl": "node ./templates/sync.js"
+	},
 	"publisher": "EdgerOS",
 	"repository": {
 		"type": "git",
@@ -192,17 +203,6 @@
 			}
 		}
 	},
-	"scripts": {
-		"pack": "vsce package",
-		"publish": "vsce publish",
-		"vscode:prepublish": "npm run compile",
-		"compile": "tsc -p ./",
-		"watch": "tsc -watch -p ./",
-		"pretest": "npm run compile && npm run lint",
-		"lint": "eslint src --ext ts",
-		"test": "node ./out/test/runTest.js",
-		"sync:tpl": "node ./templates/sync.js"
-	},
 	"devDependencies": {
 		"@types/ejs": "^3.0.6",
 		"@types/fs-extra": "^9.0.11",
@@ -211,9 +211,14 @@
 		"@types/node": "^12.11.7",
 		"@types/requireindex": "^1.2.0",
 		"@types/vscode": "^1.55.0",
-		"@typescript-eslint/eslint-plugin": "^4.9.0",
-		"@typescript-eslint/parser": "^4.9.0",
-		"eslint": "^7.15.0",
+		"@typescript-eslint/eslint-plugin": "^4.27.0",
+		"@typescript-eslint/parser": "^4.27.0",
+		"eslint": "^7.28.0",
+		"eslint-config-standard": "^16.0.3",
+		"eslint-plugin-import": "^2.23.4",
+		"eslint-plugin-mocha": "^9.0.0",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-promise": "^5.1.0",
 		"glob": "^7.1.6",
 		"mocha": "^8.1.3",
 		"typescript": "^4.1.2",
