--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,6 +15,17 @@
 				"kind": "build",
 				"isDefault": true
 			}
-		}
+		},
+		{
+			"label": "Test file",
+			"type": "shell",
+			"group": "test",
+			"command": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+			"args": [
+			  "-r",
+			  "ts-node/register",
+			  "${file}"
+			]
+		},
 	]
 }
