--- a/package.json
+++ b/package.json
@@ -1,29 +1,65 @@
 {
 	"name": "edgeros",
-	"displayName": "EdgerOS VSCode Extension",
 	"description": "EdgerOS development extension for VSCode",
-	"version": "0.2.7",
+	"version": "0.2.8",
 	"scripts": {
+		"compile": "tsc -b",
+		"watch": "tsc -b -w",
+		"lint": "eslint src --ext ts",
+		"test": "mocha -r ts-node/register test/**/*.test.ts",
+		"coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
+		"vscode:pretest": "npm run compile && npm run lint",
+		"vscode:test": "node ./out/test/runTest.js",
 		"pack": "vsce package",
 		"publish": "vsce publish",
-		"vscode:prepublish": "npm run compile",
-		"compile": "tsc -p ./",
-		"watch": "tsc -watch -p ./",
-		"pretest": "npm run compile && npm run lint",
-		"lint": "eslint src --ext ts",
-		"test": "node ./out/test/runTest.js",
-		"sync:tpl": "node ./templates/sync.js"
+		"vscode:prepublish": "npm run compile"
 	},
-	"publisher": "EdgerOS",
+	"devDependencies": {
+		"@types/ejs": "^3.0.6",
+		"@types/fs-extra": "^9.0.11",
+		"@types/glob": "^7.1.3",
+		"@types/mocha": "^8.0.4",
+		"@types/node": "^12.11.7",
+		"@types/requireindex": "^1.2.0",
+		"@types/vscode": "^1.55.0",
+		"@typescript-eslint/eslint-plugin": "^4.27.0",
+		"@typescript-eslint/parser": "^4.27.0",
+		"eslint": "^7.28.0",
+		"eslint-config-standard": "^16.0.3",
+		"eslint-plugin-import": "^2.23.4",
+		"eslint-plugin-mocha": "^9.0.0",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-promise": "^5.1.0",
+		"glob": "^7.1.6",
+		"mocha": "^8.1.3",
+		"nyc": "^15.1.0",
+		"ts-node": "^10.0.0",
+		"typescript": "^4.1.2",
+		"vsce": "^1.93.0",
+		"vscode-test": "^1.4.1"
+	},
+	"dependencies": {
+		"axios": "^0.21.1",
+		"compressing": "^1.5.1",
+		"ejs": "^3.1.6",
+		"form-data": "^4.0.0",
+		"fs-extra": "^9.1.0",
+		"globby": "^11.0.3",
+		"isomorphic-git": "^1.8.2",
+		"moment": "^2.29.1",
+		"requireindex": "^1.2.0"
+	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/edgeros/vscode-edgeros"
 	},
+	"license": "Apache-2",
+	"displayName": "EdgerOS VSCode Extension",
+	"publisher": "EdgerOS",
 	"icon": "resources/media/icon.png",
 	"engines": {
 		"vscode": "^1.55.0"
 	},
-	"license": "Apache-2",
 	"categories": [
 		"Other"
 	],
@@ -202,38 +238,5 @@
 				}
 			}
 		}
-	},
-	"devDependencies": {
-		"@types/ejs": "^3.0.6",
-		"@types/fs-extra": "^9.0.11",
-		"@types/glob": "^7.1.3",
-		"@types/mocha": "^8.0.4",
-		"@types/node": "^12.11.7",
-		"@types/requireindex": "^1.2.0",
-		"@types/vscode": "^1.55.0",
-		"@typescript-eslint/eslint-plugin": "^4.27.0",
-		"@typescript-eslint/parser": "^4.27.0",
-		"eslint": "^7.28.0",
-		"eslint-config-standard": "^16.0.3",
-		"eslint-plugin-import": "^2.23.4",
-		"eslint-plugin-mocha": "^9.0.0",
-		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-promise": "^5.1.0",
-		"glob": "^7.1.6",
-		"mocha": "^8.1.3",
-		"typescript": "^4.1.2",
-		"vsce": "^1.93.0",
-		"vscode-test": "^1.4.1"
-	},
-	"dependencies": {
-		"axios": "^0.21.1",
-		"compressing": "^1.5.1",
-		"ejs": "^3.1.6",
-		"form-data": "^4.0.0",
-		"fs-extra": "^9.1.0",
-		"globby": "^11.0.3",
-		"isomorphic-git": "^1.8.2",
-		"moment": "^2.29.1",
-		"requireindex": "^1.2.0"
 	}
 }
