--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
 		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
 	},
 	"exclude": [
+		"test",
 		"node_modules",
 		".vscode-test"
 	]
