--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
 		"vscode:prepublish": "npm run compile"
 	},
 	"devDependencies": {
+		"@types/bluebird": "^3.5.35",
 		"@types/ejs": "^3.0.6",
 		"@types/fs-extra": "^9.0.11",
 		"@types/glob": "^7.1.3",
 		"@types/mocha": "^8.0.4",
 		"@types/node": "^12.11.7",
 		"@types/requireindex": "^1.2.0",
+		"@types/rimraf": "^3.0.0",
 		"@types/vscode": "^1.55.0",
 		"@typescript-eslint/eslint-plugin": "^4.27.0",
 		"@typescript-eslint/parser": "^4.27.0",
@@ -40,6 +42,7 @@
 	},
 	"dependencies": {
 		"axios": "^0.21.1",
+		"base64url": "^3.0.1",
 		"compressing": "^1.5.1",
 		"ejs": "^3.1.6",
 		"form-data": "^4.0.0",
@@ -47,7 +50,8 @@
 		"globby": "^11.0.3",
 		"isomorphic-git": "^1.8.2",
 		"moment": "^2.29.1",
-		"requireindex": "^1.2.0"
+		"requireindex": "^1.2.0",
+		"rimraf": "^3.0.2"
 	},
 	"repository": {
 		"type": "git",
