--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "edgeros",
 	"description": "EdgerOS development extension for VSCode",
-	"version": "0.2.8",
+	"version": "0.3.0",
 	"scripts": {
 		"compile": "tsc -b",
 		"watch": "tsc -b -w",
@@ -109,6 +109,14 @@
 				}
 			},
 			{
+				"command": "edgeros.buildEap",
+				"title": "%BuildEAP%",
+				"icon": {
+					"light": "resources/icon/dark/command_buildEap.svg",
+					"dark": "resources/icon/dark/command_buildEap.svg"
+				}
+			},
+			{
 				"command": "edgeros.installEap",
 				"title": "%InstallEAP%",
 				"icon": {
@@ -145,6 +153,11 @@
 				},
 				{
 					"command": "edgeros.showAddDevView",
+					"when": "view == eosManageView && viewItem == deviceList",
+					"group": "inline"
+				},
+				{
+					"command": "edgeros.buildEap",
 					"when": "view == eosManageView && viewItem == deviceList",
 					"group": "inline"
 				},
@@ -194,9 +207,9 @@
 		"configuration": {
 			"title": "EdgerOS",
 			"properties": {
-				"edgeros.buildType": {
+				"edgeros.buildSuffix": {
 					"type": "string",
-					"default": "eap",
+					"default": "zip",
 					"enum": [
 						"eap",
 						"zip"
