--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"compile": "tsc -b",
 		"watch": "tsc -b -w",
-		"lint": "eslint src --ext ts",
+		"lint": "eslint --ext ts --ext js src view/**/index.js",
 		"test": "mocha -r ts-node/register test/**/*.test.ts",
 		"coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
 		"vscode:pretest": "npm run compile && npm run lint",
@@ -30,6 +30,7 @@
 		"eslint-plugin-import": "^2.23.4",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^5.1.0",
+		"eslint-plugin-vue": "^7.12.1",
 		"glob": "^7.1.6",
 		"mocha": "^8.1.3",
 		"nyc": "^15.1.0",
