--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -42,6 +42,9 @@
 			  "--require",
 			  "ts-node/register"
 			],
+			"env": {
+				"https_proxy": "http://localhost:7890"
+			},
 			"console": "integratedTerminal",
 			"sourceMaps": true,
 			"internalConsoleOptions": "neverOpen"
