--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "edgeros",
 	"description": "EdgerOS development extension for VSCode",
-	"version": "0.3.0",
+	"version": "0.4.0",
 	"scripts": {
 		"compile": "tsc -b",
 		"watch": "tsc -b -w",
@@ -19,7 +19,7 @@
 		"@types/fs-extra": "^9.0.11",
 		"@types/glob": "^7.1.3",
 		"@types/mocha": "^8.0.4",
-		"@types/node": "^12.11.7",
+		"@types/node": "^12.20.16",
 		"@types/requireindex": "^1.2.0",
 		"@types/rimraf": "^3.0.0",
 		"@types/vscode": "^1.57.1",
@@ -40,6 +40,7 @@
 		"vscode-test": "^1.5.2"
 	},
 	"dependencies": {
+		"ansi-regex": "^6.0.0",
 		"axios": "^0.21.1",
 		"base64url": "^3.0.1",
 		"compressing": "^1.5.1",
@@ -50,7 +51,8 @@
 		"isomorphic-git": "^1.8.2",
 		"moment": "^2.29.1",
 		"requireindex": "^1.2.0",
-		"rimraf": "^3.0.2"
+		"rimraf": "^3.0.2",
+		"strip-ansi": "^7.0.0"
 	},
 	"repository": {
 		"type": "git",
