--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"watch": "tsc -b -w",
 		"lint": "eslint --ext ts --ext js src view/**/index.js",
 		"test": "mocha -r ts-node/register test/**/*.test.ts",
-		"coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
+		"coverage": "nyc mocha -r ts-node/register -r source-map-support/register test/**/*.test.ts",
 		"vscode:pretest": "npm run compile && npm run lint",
 		"vscode:test": "node ./out/test/runTest.js",
 		"pack": "vsce package",
@@ -15,6 +15,7 @@
 		"vscode:prepublish": "npm run compile"
 	},
 	"devDependencies": {
+		"@istanbuljs/nyc-config-typescript": "^1.0.1",
 		"@types/ejs": "^3.0.6",
 		"@types/fs-extra": "^9.0.11",
 		"@types/glob": "^7.1.3",
@@ -34,7 +35,8 @@
 		"glob": "^7.1.6",
 		"mocha": "^8.1.3",
 		"nyc": "^15.1.0",
-		"ts-node": "^10.0.0",
+		"source-map-support": "^0.5.20",
+		"ts-node": "^10.2.1",
 		"typescript": "^4.1.2",
 		"vsce": "^1.93.0",
 		"vscode-test": "^1.5.2"
