--- a/package.json
+++ b/package.json
@@ -1,261 +1,265 @@
 {
-	"name": "edgeros",
-	"description": "EdgerOS development extension for VSCode",
-	"version": "0.4.6",
-	"scripts": {
-		"compile": "tsc -b",
-		"watch": "tsc -b -w",
-		"lint": "eslint --ext ts --ext js src view/**/index.js",
-		"test": "mocha -r ts-node/register test/**/*.test.ts",
-		"coverage": "nyc mocha -r ts-node/register -r source-map-support/register test/**/*.test.ts",
-		"vscode:pretest": "npm run compile && npm run lint",
-		"vscode:test": "node ./out/test/runTest.js",
-		"pack": "vsce package",
-		"publish": "vsce publish",
-		"vscode:prepublish": "npm run compile"
-	},
-	"devDependencies": {
-		"@istanbuljs/nyc-config-typescript": "^1.0.1",
-		"@types/ejs": "^3.0.6",
-		"@types/fs-extra": "^9.0.11",
-		"@types/glob": "^7.1.3",
-		"@types/mocha": "^8.0.4",
-		"@types/node": "^12.20.16",
-		"@types/requireindex": "^1.2.0",
-		"@types/rimraf": "^3.0.0",
-		"@types/vscode": "^1.57.1",
-		"@typescript-eslint/eslint-plugin": "^4.27.0",
-		"@typescript-eslint/parser": "^4.27.0",
-		"eslint": "^7.28.0",
-		"eslint-config-standard": "^16.0.3",
-		"eslint-plugin-import": "^2.23.4",
-		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-promise": "^5.1.0",
-		"eslint-plugin-vue": "^7.12.1",
-		"glob": "^7.1.6",
-		"mocha": "^8.1.3",
-		"nyc": "^15.1.0",
-		"source-map-support": "^0.5.20",
-		"ts-node": "^10.2.1",
-		"typescript": "^4.1.2",
-		"vsce": "^1.93.0",
-		"vscode-test": "^1.5.2"
-	},
-	"dependencies": {
-		"ansi-regex": "^6.0.0",
-		"axios": "^0.21.1",
-		"base64url": "^3.0.1",
-		"compressing": "^1.5.1",
-		"ejs": "^3.1.6",
-		"form-data": "^4.0.0",
-		"fs-extra": "^9.1.0",
-		"globby": "^11.0.3",
-		"isomorphic-git": "^1.8.2",
-		"moment": "^2.29.1",
-		"requireindex": "^1.2.0",
-		"strip-ansi": "^7.0.0"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/edgeros/vscode-edgeros"
-	},
-	"license": "Apache-2",
-	"displayName": "EdgerOS VSCode Extension",
-	"publisher": "EdgerOS",
-	"icon": "resources/media/icon.png",
-	"engines": {
-		"vscode": "^1.57.1"
-	},
-	"categories": [
-		"Other"
-	],
-	"activationEvents": [
-		"onCommand:edgeros.helloEdgerOS",
-		"onView:eosManageView"
-	],
-	"main": "./out/extension.js",
-	"contributes": {
-		"commands": [
-			{
-				"command": "edgeros.helloEdgerOS",
-				"title": "hello.EdgerOS"
-			},
-			{
-				"command": "edgeros.showAddDevView",
-				"title": "%addDeviceView%",
-				"icon": {
-					"light": "resources/icon/light/command_addDevice.svg",
-					"dark": "resources/icon/dark/command_addDevice.svg"
-				}
-			},
-			{
-				"command": "edgeros.showCreateProView",
-				"title": "%CreateEdgerOSProject%",
-				"icon": {
-					"light": "resources/icon/light/command_createProject.svg",
-					"dark": "resources/icon/dark/command_createProject.svg"
-				}
-			},
-			{
-				"command": "edgeros.openBrowser",
-				"title": "%OpenBrowser%",
-				"icon": {
-					"light": "resources/icon/light/command_openBrowser.svg",
-					"dark": "resources/icon/dark/command_openBrowser.svg"
-				}
-			},
-			{
-				"command": "edgeros.openConsole",
-				"title": "%OpenConsole%",
-				"icon": {
-					"light": "resources/icon/dark/command_openConsole.svg",
-					"dark": "resources/icon/dark/command_openConsole.svg"
-				}
-			},
-			{
-				"command": "edgeros.buildEap",
-				"title": "%BuildEAP%",
-				"icon": {
-					"light": "resources/icon/dark/command_buildEap.svg",
-					"dark": "resources/icon/dark/command_buildEap.svg"
-				}
-			},
-			{
-				"command": "edgeros.installEap",
-				"title": "%InstallEAP%",
-				"icon": {
-					"light": "resources/icon/dark/command_upload.svg",
-					"dark": "resources/icon/dark/command_upload.svg"
-				}
-			},
-			{
-				"command": "edgeros.installTestEap",
-				"title": "%InstallTestEap%"
-			}
-		],
-		"views": {
-			"explorer": [
-				{
-					"id": "eosManageView",
-					"name": "EdgerOS"
-				}
-			]
-		},
-		"menus": {
-			"view/title": [
-				{
-					"command": "edgeros.showCreateProView",
-					"when": "view == eosManageView",
-					"group": "navigation"
-				}
-			],
-			"view/item/context": [
-				{
-					"command": "edgeros.openBrowser",
-					"when": "view == eosManageView && viewItem == web",
-					"group": "inline"
-				},
-				{
-					"command": "edgeros.showAddDevView",
-					"when": "view == eosManageView && viewItem == deviceList",
-					"group": "inline"
-				},
-				{
-					"command": "edgeros.buildEap",
-					"when": "view == eosManageView && viewItem == deviceList",
-					"group": "inline"
-				},
-				{
-					"command": "edgeros.openConsole",
-					"when": "view == eosManageView && viewItem == device",
-					"group": "inline"
-				},
-				{
-					"command": "edgeros.installEap",
-					"when": "view == eosManageView && viewItem == device",
-					"group": "inline"
-				},
-				{
-					"command": "edgeros.installTestEap",
-					"when": "view == eosManageView && viewItem == device"
-				}
-			]
-		},
-		"viewsWelcome": [
-			{
-				"view": "eosManageView",
-				"contents": "%welcome%"
-			}
-		],
-		"languages": [
-			{
-				"id": "Log",
-				"extensions": [
-					".log"
-				]
-			}
-		],
-		"grammars": [
-			{
-				"language": "Log",
-				"scopeName": "edgeros.log",
-				"path": "./syntaxes/log.tmLanguage"
-			}
-		],
-		"jsonValidation": [
-			{
-				"fileMatch": "edgeros.json",
-				"url": "%edgerosJsonSchemaPath%"
-			}
-		],
-		"configuration": {
-			"title": "EdgerOS",
-			"properties": {
-				"edgeros.buildSuffix": {
-					"type": "string",
-					"default": "zip",
-					"enum": [
-						"eap",
-						"zip"
-					],
-					"enumDescriptions": [
-						"%ConfigBuildEapTypeEap%",
-						"%ConfigBuildEapTypeZip%"
-					],
-					"description": "%ConfigBuildEapDescription%"
-				},
-				"edgeros.versionIncrement": {
-					"type": "boolean",
-					"default": "true",
-					"description": "%ConfigBuileVersionIncrement%"
-				},
-				"edgeros.installEAP": {
-					"type": "string",
-					"default": "Auto",
-					"enum": [
-						"Auto",
-						"Manual"
-					],
-					"enumDescriptions": [
-						"%ConfigInstallEapModelNew%",
-						"%ConfigInstallEapModelHistory%"
-					],
-					"description": "%ConfigInstallEapModeDescription%"
-				},
-				"edgeros.templateSource": {
-					"type": "string",
-					"default": "Github",
-					"enum": [
-						"Github",
-						"Gitee"
-					],
-					"enumDescriptions": [
-						"%ConfigTemplateSoucreGithub%",
-						"%ConfigTemplateSoucreGitee%"
-					],
-					"description": "%ConfigTemplateSoucreDescription%"
-				}
-			}
-		}
-	}
+  "name": "edgeros",
+  "description": "EdgerOS development extension for VSCode",
+  "version": "0.4.7",
+  "scripts": {
+    "compile": "tsc -b",
+    "watch": "tsc -b -w",
+    "lint": "eslint --ext ts --ext js src view/**/index.js",
+    "test": "mocha -r ts-node/register test/**/*.test.ts",
+    "coverage": "nyc mocha -r ts-node/register -r source-map-support/register test/**/*.test.ts",
+    "vscode:pretest": "npm run compile && npm run lint",
+    "vscode:test": "node ./out/test/runTest.js",
+    "pack": "vsce package",
+    "publish": "vsce publish",
+    "vscode:prepublish": "npm run compile"
+  },
+  "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@types/ejs": "^3.0.6",
+    "@types/fs-extra": "^9.0.11",
+    "@types/glob": "^7.1.3",
+    "@types/mocha": "^8.0.4",
+    "@types/node": "^12.20.16",
+    "@types/requireindex": "^1.2.0",
+    "@types/rimraf": "^3.0.0",
+    "@types/vscode": "^1.57.1",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
+    "eslint": "^7.28.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-vue": "^7.12.1",
+    "glob": "^7.1.6",
+    "mocha": "^8.1.3",
+    "nyc": "^15.1.0",
+    "source-map-support": "^0.5.20",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.1.2",
+    "vsce": "^1.93.0",
+    "vscode-test": "^1.5.2"
+  },
+  "dependencies": {
+    "ansi-regex": "^6.0.0",
+    "axios": "^0.21.1",
+    "base64url": "^3.0.1",
+    "compressing": "^1.5.1",
+    "ejs": "^3.1.6",
+    "form-data": "^4.0.0",
+    "fs-extra": "^9.1.0",
+    "globby": "^11.0.3",
+    "isomorphic-git": "^1.8.2",
+    "moment": "^2.29.1",
+    "requireindex": "^1.2.0",
+    "strip-ansi": "^7.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/edgeros/vscode-edgeros"
+  },
+  "license": "Apache-2",
+  "displayName": "EdgerOS VSCode Extension",
+  "publisher": "EdgerOS",
+  "icon": "resources/media/icon.png",
+  "engines": {
+    "vscode": "^1.57.1"
+  },
+  "categories": [
+    "Other"
+  ],
+  "activationEvents": [
+    "onCommand:edgeros.helloEdgerOS",
+    "onView:eosManageView"
+  ],
+  "main": "./out/extension.js",
+  "contributes": {
+    "commands": [
+      {
+        "command": "edgeros.helloEdgerOS",
+        "title": "hello.EdgerOS"
+      },
+      {
+        "command": "edgeros.showAddDevView",
+        "title": "%addDeviceView%",
+        "icon": {
+          "light": "resources/icon/light/command_addDevice.svg",
+          "dark": "resources/icon/dark/command_addDevice.svg"
+        }
+      },
+      {
+        "command": "edgeros.showCreateProView",
+        "title": "%CreateEdgerOSProject%",
+        "icon": {
+          "light": "resources/icon/light/command_createProject.svg",
+          "dark": "resources/icon/dark/command_createProject.svg"
+        }
+      },
+      {
+        "command": "edgeros.openBrowser",
+        "title": "%OpenBrowser%",
+        "icon": {
+          "light": "resources/icon/light/command_openBrowser.svg",
+          "dark": "resources/icon/dark/command_openBrowser.svg"
+        }
+      },
+      {
+        "command": "edgeros.openConsole",
+        "title": "%OpenConsole%",
+        "icon": {
+          "light": "resources/icon/dark/command_openConsole.svg",
+          "dark": "resources/icon/dark/command_openConsole.svg"
+        }
+      },
+      {
+        "command": "edgeros.buildEap",
+        "title": "%BuildEAP%",
+        "icon": {
+          "light": "resources/icon/dark/command_buildEap.svg",
+          "dark": "resources/icon/dark/command_buildEap.svg"
+        }
+      },
+      {
+        "command": "edgeros.installEap",
+        "title": "%InstallEAP%",
+        "icon": {
+          "light": "resources/icon/dark/command_upload.svg",
+          "dark": "resources/icon/dark/command_upload.svg"
+        }
+      },
+      {
+        "command": "edgeros.installTestEap",
+        "title": "%InstallTestEap%"
+      },
+      {
+        "command": "edgeros.setBuildProject",
+        "title": "%setBuildProject%"
+      }
+    ],
+    "views": {
+      "explorer": [
+        {
+          "id": "eosManageView",
+          "name": "EdgerOS"
+        }
+      ]
+    },
+    "menus": {
+      "view/title": [
+        {
+          "command": "edgeros.showCreateProView",
+          "when": "view == eosManageView",
+          "group": "navigation"
+        }
+      ],
+      "view/item/context": [
+        {
+          "command": "edgeros.openBrowser",
+          "when": "view == eosManageView && viewItem == web",
+          "group": "inline"
+        },
+        {
+          "command": "edgeros.showAddDevView",
+          "when": "view == eosManageView && viewItem == deviceList",
+          "group": "inline"
+        },
+        {
+          "command": "edgeros.buildEap",
+          "when": "view == eosManageView && viewItem == deviceList",
+          "group": "inline"
+        },
+        {
+          "command": "edgeros.openConsole",
+          "when": "view == eosManageView && viewItem == device",
+          "group": "inline"
+        },
+        {
+          "command": "edgeros.installEap",
+          "when": "view == eosManageView && viewItem == device",
+          "group": "inline"
+        },
+        {
+          "command": "edgeros.installTestEap",
+          "when": "view == eosManageView && viewItem == device"
+        }
+      ]
+    },
+    "viewsWelcome": [
+      {
+        "view": "eosManageView",
+        "contents": "%welcome%"
+      }
+    ],
+    "languages": [
+      {
+        "id": "Log",
+        "extensions": [
+          ".log"
+        ]
+      }
+    ],
+    "grammars": [
+      {
+        "language": "Log",
+        "scopeName": "edgeros.log",
+        "path": "./syntaxes/log.tmLanguage"
+      }
+    ],
+    "jsonValidation": [
+      {
+        "fileMatch": "edgeros.json",
+        "url": "%edgerosJsonSchemaPath%"
+      }
+    ],
+    "configuration": {
+      "title": "EdgerOS",
+      "properties": {
+        "edgeros.buildSuffix": {
+          "type": "string",
+          "default": "zip",
+          "enum": [
+            "eap",
+            "zip"
+          ],
+          "enumDescriptions": [
+            "%ConfigBuildEapTypeEap%",
+            "%ConfigBuildEapTypeZip%"
+          ],
+          "description": "%ConfigBuildEapDescription%"
+        },
+        "edgeros.versionIncrement": {
+          "type": "boolean",
+          "default": "true",
+          "description": "%ConfigBuileVersionIncrement%"
+        },
+        "edgeros.installEAP": {
+          "type": "string",
+          "default": "Auto",
+          "enum": [
+            "Auto",
+            "Manual"
+          ],
+          "enumDescriptions": [
+            "%ConfigInstallEapModelNew%",
+            "%ConfigInstallEapModelHistory%"
+          ],
+          "description": "%ConfigInstallEapModeDescription%"
+        },
+        "edgeros.templateSource": {
+          "type": "string",
+          "default": "Github",
+          "enum": [
+            "Github",
+            "Gitee"
+          ],
+          "enumDescriptions": [
+            "%ConfigTemplateSoucreGithub%",
+            "%ConfigTemplateSoucreGitee%"
+          ],
+          "description": "%ConfigTemplateSoucreDescription%"
+        }
+      }
+    }
+  }
 }
