update changelog buildSuffix default .eap

--- a/package.json
+++ b/package.json
@@ -217,7 +217,7 @@
       "properties": {
         "edgeros.buildSuffix": {
           "type": "string",
-          "default": "zip",
+          "default": "eap",
           "enum": [
             "eap",
             "zip"
