--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/ejs": "^3.0.6",
     "@types/fs-extra": "^9.0.11",
     "@types/glob": "^7.1.3",
+    "@types/gulp": "^4.0.9",
     "@types/mocha": "^8.0.4",
     "@types/node": "^12.20.16",
     "@types/requireindex": "^1.2.0",
@@ -37,7 +38,6 @@
     "nyc": "^15.1.0",
     "source-map-support": "^0.5.20",
     "ts-node": "^10.2.1",
-    "typescript": "^4.1.2",
     "vsce": "^1.93.0",
     "vscode-test": "^1.5.2"
   },
@@ -50,10 +50,13 @@
     "form-data": "^4.0.0",
     "fs-extra": "^9.1.0",
     "globby": "^11.0.3",
+    "gulp": "^4.0.2",
+    "gulp-typescript": "^6.0.0-alpha.1",
     "isomorphic-git": "^1.8.2",
     "moment": "^2.29.1",
     "requireindex": "^1.2.0",
-    "strip-ansi": "^7.0.0"
+    "strip-ansi": "^7.0.0",
+    "typescript": "^4.4.3"
   },
   "repository": {
     "type": "git",
@@ -71,7 +74,8 @@
   ],
   "activationEvents": [
     "onCommand:edgeros.helloEdgerOS",
-    "onView:eosManageView"
+    "onView:eosManageView",
+    "workspaceContains:**/edgeros.json"
   ],
   "main": "./out/extension.js",
   "contributes": {
