--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "globby": "^11.0.3",
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
+    "image-size": "^1.0.0",
     "isomorphic-git": "^1.8.2",
     "moment": "^2.29.1",
     "requireindex": "^1.2.0",
