--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "pack": "vsce package",
     "build": "npm run pack",
     "publish": "vsce publish",
+    "pre-release": "vsce publish --pre-release",
     "vscode:prepublish": "npm run compile"
   },
   "devDependencies": {
