--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "edgeros",
   "description": "EdgerOS development extension for VSCode",
-  "version": "0.5.21",
+  "version": "0.5.22",
   "scripts": {
     "commit": "cz",
     "compile": "tsc -b",
@@ -43,7 +43,7 @@
     "nyc": "^15.1.0",
     "source-map-support": "^0.5.20",
     "ts-node": "^10.2.1",
-    "vsce": "^2.6.5",
+    "vsce": "^2.15.0",
     "vscode-test": "^1.5.2"
   },
   "dependencies": {
@@ -71,7 +71,7 @@
   },
   "license": "Apache-2",
   "displayName": "EdgerOS VSCode Extension",
-  "publisher": "EdgerOS",
+  "publisher": "edgeros",
   "icon": "resources/media/icon.png",
   "engines": {
     "vscode": "^1.57.1"
