--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "edgeros",
   "description": "EdgerOS development extension for VSCode",
-  "version": "0.5.22",
+  "version": "0.5.23",
   "scripts": {
     "commit": "cz",
     "compile": "tsc -b",
@@ -71,7 +71,7 @@
   },
   "license": "Apache-2",
   "displayName": "EdgerOS VSCode Extension",
-  "publisher": "edgeros",
+  "publisher": "EdgerOS",
   "icon": "resources/media/icon.png",
   "engines": {
     "vscode": "^1.57.1"
