--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     // "noUnusedParameters": true,  /* Report errors on unused parameters. */
   },
   "exclude": [
+    "out",
     "test",
     "node_modules",
     ".vscode-test"
