fix some ui bugs & update default -> gitee

--- a/package.json
+++ b/package.json
@@ -281,7 +281,7 @@
         },
         "edgeros.templateSource": {
           "type": "string",
-          "default": "Github",
+          "default": "Gitee",
           "enum": [
             "Github",
             "Gitee"
